# trendsee

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_and_publications.py
backend/app/: auth.py  config.py  database.py  dependencies.py  exceptions.py  main.py  redis.py  seed.py
backend/app/models/: publication.py  user.py
backend/app/repositories/: publication_repository.py  user_repository.py
backend/app/routers/: publications.py  users.py
backend/app/schemas/: publication.py  user.py
backend/app/services/: publication_service.py  user_service.py
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: publications.js
frontend/src/assets/: main.css
frontend/src/components/: AnalysisPanel.vue  AppSidebar.vue  LoadingSpinner.vue  VideoCard.vue
frontend/src/composables/: useInfiniteScroll.js
